--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 <body>
 
     <section class="header">
-        <a href="index.php" class="logo">FB</a>
+        <a href="index.html" class="logo">FB</a>
 
         <div class="menu-desktop">
-            <a href="portifolio.php">Portifólio</a>
+            <a href="portifolio.html">Portifólio</a>
             <a href="#sobre-mim">Sobre mim</a>
-            <a href="contato.php">Contato</a>
+            <a href="contato.html">Contato</a>
         </div>
 
         <div class="menu-mobile-icon"><i class="fa-solid fa-bars"></i></div>
@@ -28,9 +28,9 @@
         <div class="clear"></div>
 
         <div class="menu-mobile-container">
-            <a href="portifolio.php">Portifólio</a>
+            <a href="portifolio.html">Portifólio</a>
             <a href="#sobre-mim">Sobre mim</a>
-            <a href="contato.php">Contato</a>
+            <a href="contato.html">Contato</a>
         </div>
     </section>
 
@@ -97,9 +97,9 @@
     <section class="footer">
         <div class="footer-content">
             <div class="footer-text">
-                <a href="portifolio.php">Portifólio</a>
+                <a href="portifolio.html">Portifólio</a>
                 <a>Sobre mim</a>
-                <a href="contato.php">Contato</a>
+                <a href="contato.html">Contato</a>
             </div>
             <div class="separator"></div>
             <div class="footer-socialmedia">
