--- a/portifolio.html
+++ b/portifolio.html
@@ -16,12 +16,12 @@
 <div class="scroll-body">
     
     <section class="header">
-        <a href="index.php" class="logo">FB</a>
+        <a href="index.html" class="logo">FB</a>
 
         <div class="menu-desktop">
-            <a href="portifolio.php">Portifólio</a>
-            <a href="index.php#sobre-mim">Sobre mim</a>
-            <a href="contato.php">Contato</a>
+            <a href="portifolio.html">Portifólio</a>
+            <a href="index.html#sobre-mim">Sobre mim</a>
+            <a href="contato.html">Contato</a>
         </div>
 
         <div class="menu-mobile-icon"><i class="fa-solid fa-bars"></i></div>
@@ -29,9 +29,9 @@
         <div class="clear"></div>
 
         <div class="menu-mobile-container">
-            <a href="portifolio.php">Portifólio</a>
-            <a href="index.php#sobre-mim">Sobre mim</a>
-            <a href="contato.php">Contato</a>
+            <a href="portifolio.html">Portifólio</a>
+            <a href="index.html#sobre-mim">Sobre mim</a>
+            <a href="contato.html">Contato</a>
         </div>
     </section>
 
@@ -126,8 +126,8 @@
         <div class="footer-content">
             <div class="footer-text">
                 <a>Portifólio</a>
-                <a href="index.php#sobre-mim">Sobre mim</a>
-                <a href="contato.php">Contato</a>
+                <a href="index.html#sobre-mim">Sobre mim</a>
+                <a href="contato.html">Contato</a>
             </div>
             <div class="separator"></div>
             <div class="footer-socialmedia">
